# odinclaw

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  install.bat  pyproject.toml  setup.bat  setup.sh
.github/workflows/: ci.yml
docs/: GPU_vs_ARCHITECTURE.md  ODIN_THESIS.md  ODIN_WHITEPAPER.md
docs/architecture/: 00_ODINCLAW_START_HERE.txt  ODINCLAW BUILD MATRIX.txt  ODINCLAW BUILD ORDER.txt  ODINCLAW CANONICAL INVENTORY.txt  ODINCLAW COMPLETION AUDIT.txt  ODINCLAW IMPLEMENTATION MAPPING.txt  ODINCLAW INTERDEPENDENCY MAP.txt  ODINCLAW OPTIONAL HIGH-VALUE ADDITIONS.txt  ODINCLAW OVERVIEW.txt  ODINCLAW PACKAGE LAYOUT.txt  ODINCLAW POSSIBLE MISSING ITEMS.txt  ODINCLAW RESOLVED SPEC DECISIONS.txt  ODINCLAW SUBSYSTEM DEPENDENCY LIST.txt  ODINCLAW SUBSYSTEM SPECIFICATIONS.txt  ODINCLAW SYSTEM CATALOG.txt  ODINCLAW SYSTEM DEPENDENCY LIST.txt  ODINCLAW UPDATED REQUIREMENTS LIST.txt
installer/: BUILD_INSTALLER.md  odinclaw_setup.iss  setup.ps1
odinclaw/: __init__.py  cli.py
odinclaw/contracts/: __init__.py  action_classes.py  action_ids.py  approval.py  audit.py  conflict.py  context.py  continuity.py  events.py  governance.py  memory.py  provenance.py  reader.py  receipts.py  shell_state.py  trust.py
odinclaw/shell/: hooks.py  session_runtime.py
tests/: TESTING_STRATEGY.md
tests/audit/: test_receipt_chain.py
tests/context/: test_engine.py
tests/continuity/: test_evidence.py
tests/contracts/: test_action_ids.py  test_receipts.py
tests/governance/: test_action_legality.py  test_risk_classifier.py
tests/integration/: test_canon_attention_flow.py  (+14 more)
(+38 files in other folders)
