[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odinclaw"
version = "0.1.0"
description = "OdinClaw: ODIN governed AI substrate"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Borr"}]
dependencies = [
    "rich>=13.0",
    "ollama>=0.2",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.scripts]
odinclaw = "odinclaw.cli:main"
odinclaw-tray = "odinclaw.tray:main"
odinclaw-launch = "odinclaw.launcher:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["odinclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]


